<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/et_input_content_description"
        android:hint="@string/zagolovoc" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_whats_app"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/whatsapp"
        android:textSize="26sp"
        app:cardCornerRadius="26dp"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/tv_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/google"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_youtube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/red"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/tv_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:text="@string/youtube"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/fag_go_content_description"
        android:src="@drawable/arrow_right"
        android:tint="@color/white" />
</LinearLayout>